# toolpilot

./: .gitignore  .mcp.example.json  .mcp.json  AGENTS.md  Cargo.toml  README.md  SKILL.md  TODO.md  mcp-config.example.json
.github/: copilot-setup-steps.yml
.github/workflows/: quality.yml
src/: lib.rs  main.rs
