[package]
name = "toolpilot"
version = "0.1.0"
edition = "2024"

[features]
default = []
verbose-logging = []

[dependencies]
glob = "0.3.3"
memmap2 = "0.9.9"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["io-std", "io-util", "macros", "rt"] }

[dev-dependencies]
tempfile = "3.23.0"
